# claude-mac-manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PACKAGING_STATUS.md  README.md  ROADMAP.md  STATUS.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
claude_mac_manager/: __init__.py  cli.py  install.py
claude_mac_manager/safety/: __init__.py  protected_paths.py  validator.py
data/disk/: cache.db
modules/disk/: README.md  schema.sql
scripts/: cleanup_dependencies.sh
tests/: conftest.py
tests/integration/: test_workflows.py
tests/safety/: test_protected_paths.py  test_validator.py
tests/unit/: test_cli.py  test_database.py
tests/utils/: assertions.py  fixtures.py
