[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "claude-mac-manager"
version = "0.1.0"
description = "Comprehensive macOS system management toolkit with disk analysis, cleanup automation, and Claude Code integration"
authors = ["Vladimir K.S."]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/vladimir-ks/claude-mac-manager"
repository = "https://github.com/vladimir-ks/claude-mac-manager"
documentation = "https://github.com/vladimir-ks/claude-mac-manager/blob/main/README.md"
keywords = ["macos", "disk-management", "system-tools", "cleanup", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
packages = [{include = "claude_mac_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"           # CLI framework with decorators
send2trash = "^1.8.3"      # Safe deletion to macOS Trash
pyyaml = "^6.0.1"          # Configuration file parsing
rich = "^13.7.0"           # Beautiful terminal output with colors
pathspec = "^0.12.1"       # Gitignore-style pattern matching

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"          # Testing framework
pytest-cov = "^4.1.0"      # Coverage reporting
pyfakefs = "^5.3.2"        # Fake filesystem for testing
black = "^23.12.1"         # Code formatting
ruff = "^0.1.9"            # Fast Python linter
mypy = "^1.8.0"            # Static type checking
pre-commit = "^3.6.0"      # Git hooks for quality checks

[tool.poetry.scripts]
cmm = "claude_mac_manager.cli:main"
cmm-postinstall = "claude_mac_manager.install:post_install"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/vladimir-ks/claude-mac-manager/issues"
"Changelog" = "https://github.com/vladimir-ks/claude-mac-manager/blob/main/CHANGELOG.md"

# ====================
# Black Configuration
# ====================
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ====================
# Ruff Configuration
# ====================
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/**/*.py" = ["ARG"]  # Unused arguments in tests

# ====================
# MyPy Configuration
# ====================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ====================
# Pytest Configuration
# ====================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",                    # Show summary of all test outcomes
    "--strict-markers",       # Enforce marker registration
    "--strict-config",        # Enforce config validation
    "--cov=claude_mac_manager",  # Coverage for main package
    "--cov-report=term-missing", # Show missing lines in terminal
    "--cov-report=html",      # Generate HTML coverage report
    "--cov-report=xml",       # Generate XML for CI/CD
    "--cov-fail-under=85",    # Fail if coverage < 85%
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "safety: marks tests as safety-critical tests (must have 100% coverage)",
    "requires_filesystem: marks tests that require real filesystem access",
]

# ====================
# Coverage Configuration
# ====================
[tool.coverage.run]
branch = true
source = ["claude_mac_manager"]
omit = [
    "tests/*",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.coverage.paths]
source = ["claude_mac_manager/"]

[tool.coverage.html]
directory = "htmlcov"

# ====================
# Semantic Release Configuration
# ====================
[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = ["claude_mac_manager/__init__.py:__version__"]
branch = "main"
upload_to_pypi = false  # Set to true when ready for production
upload_to_release = true
build_command = "poetry build"
commit_author = "Vladimir K.S. <vmks@local>"
